--- a/404.html
+++ b/404.html
@@ -18,8 +18,7 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p style="margin-top: 4em;">404</p>
+  <p>page not found; take a rest, weary one.</p>
+  <p>it's raining somewhere, right now.</p>
 </div>
